<resources>
    <string name="app_name">GeekNews</string>
    <string name="log">登陆</string>
    <string name="info">咨询</string>
    <string name="zhihu">知乎日报</string>
    <string name="options">选项</string>
    <string name="weixin">微信精选</string>
    <string name="gank">干货集中营</string>
    <string name="gold">稀土掘金</string>
    <string name="v2ex">V2EX</string>
    <string name="collect">收藏</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="dailynews">日报</string>
    <string name="sections">专栏</string>
    <string name="hot">热门</string>
    <string name="special_show">首页特别展示</string>

    <string-array name="query_suggestions">
        <item>Android</item>
        <item>iOS</item>
        <item>SCALA</item>
        <item>Ruby</item>
        <item>JavaScript</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
