<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/info">
        <item android:title="@string/info" android:id="@+id/info_title"></item>
        <item
            android:id="@+id/zhihu"
            android:checkable="true"
            android:icon="@mipmap/ic_drawer_zhihu"
            android:title="@string/zhihu"></item>
        <item
            android:id="@+id/weixin"
            android:checkable="true"
            android:icon="@mipmap/ic_drawer_wechat"
            android:title="@string/weixin"></item>
        <item
            android:id="@+id/gank"
            android:checkable="true"
            android:icon="@mipmap/ic_drawer_gank"
            android:title="@string/gank"></item>
        <item
            android:id="@+id/gold"
            android:checkable="true"
            android:icon="@mipmap/ic_drawer_gold"
            android:title="@string/gold"></item>
        <item
            android:id="@+id/v2ex"
            android:checkable="true"
            android:icon="@mipmap/ic_drawer_vtex"
            android:title="@string/v2ex"></item>
    </group>
    <group android:id="@+id/options">
        <item android:title="@string/options" android:id="@+id/option_title"></item>
        <item
            android:id="@+id/collect"
            android:checkable="true"
            android:icon="@mipmap/ic_drawer_like"
            android:title="@string/collect"></item>
        <item
            android:id="@+id/settings"
            android:checkable="true"
            android:icon="@mipmap/ic_drawer_setting"
            android:title="@string/settings"></item>
        <item
            android:id="@+id/about"
            android:checkable="true"
            android:icon="@mipmap/ic_drawer_about"
            android:title="@string/about"></item>

    </group>
</menu>